add gyroscope integration for tracking gravity vector